packages/ops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: name-space
  labels:
    name: name-space
